tests/baselines/reference/nestedBlockScopedBindings11(strict=true).errors.txt
nestedBlockScopedBindings11.ts(3,9): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings11.ts(4,11): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings11.ts(10,13): error TS7034: Variable 'y' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings11.ts(11,15): error TS7005: Variable 'y' implicitly has an 'any' type.


==== nestedBlockScopedBindings11.ts (4 errors) ====
    var x;
    {
        let x;
            ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
        () => x;
              ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
    }
    
    var y;
    switch (1) {
        case 1:
            let y;
                ~
!!! error TS7034: Variable 'y' implicitly has type 'any' in some locations where its type cannot be determined.
            () => y;
                  ~
!!! error TS7005: Variable 'y' implicitly has an 'any' type.
            break;
    }